= HEAD

* Add symbol_views plugin, allowing match blocks to return a template name symbol (jeremyevans)

* Add per_thread_caching plugin, for using separate caches per thread instead of shared thread-safe caches (jeremyevans)

* Add hash_matcher class method, for easily creating hash match methods (jeremyevans)

* Add symbol_matchers plugin, for using symbol-specific matching regexps (jeremyevans)

* Add csrf plugin for csrf protection using rack_csrf (jeremyevans)

* Optimize r.is, r.get, r.post and similar methods by reducing the number of Array objects created (jeremyevans)

* Support RequestClassMethods and ResponseClassMethods in plugins (jeremyevans)

* Add Roda::RodaCache for a thread safe cache, currently used for match patterns, templates, and plugins (jeremyevans)

* Optimize matching by caching consume regexp for strings, regexp, symbol, and :extension matchers (jeremyevans)

* Add r.root for matching root (path "/"), for easier to read version of r.is "" (jeremyevans)

* Optimize r.is terminal matcher, remove :term hash matcher (jeremyevans)

* Make flash plugin no longer depend on sinatra-flash (jeremyevans)

* Move version file to roda/version so it can be required separately without loading dependencies (jeremyevans)

= 0.9.0 (2014-07-30)

* Initial public release